# CS475-Project2

./: .gitignore  build.sh  buildandrun.sh  runtimeconfig.json
src/: CMakeLists.txt
src/Project2/: Body.h  CMakeLists.txt  ParallelismType.h  Project2.cpp  Utils.cpp  Utils.h
